test/sema/negative/repeated_definite_array_expr02.impala
fn main() -> int {
    let x: [int*2] = [0, ..-2];
    x(0)
}
